<resources>
    <string name="init_warning_title">Warning</string>
    <string name="init_warning_body"><![CDATA[This app is unofficial. The developer of WAMobile is not associated with the University of Guelph in any way,
                                        apart from being a student. By entering your single sign-on credentials into third-party apps, you potentially put
                                        yourself at risk for phishing attacks. If you wish to verify the safety of this app yourself, you can
                                        <a href="https://github.com/ryangwsimmons/WAMobile">view the source code on GitHub.</a>]]></string>

    <string name="app_name">WAMobile</string>
    <string name="welcome_text">Welcome.\nTo start, please log in with your University of Guelph Central Login ID.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="invalid_creds_message">Please enter a valid username and password.</string>

    <string name="menuItem_news">News</string>
    <string name="menuItem_registration">Registration</string>
    <string name="menuItem_searchSections">Search for Sections</string>
    <string name="menuItem_academicProfile">Academic Profile</string>
    <string name="menuItem_grades">Grades</string>
    <string name="menuItem_financialProfile">Financial Profile</string>
    <string name="menuItem_accountView">Account View</string>
    <string name="menuItem_about">About</string>

    <string name="network_error">A network error has occurred. Please check your internet connection and try again.</string>
    <string name="signedIn_message">Signed into WebAdvisor as&#160;</string>
    <string name="exit_message">Press back again to exit</string>

    <string name="termSelect_message">Select Term</string>
    <string name="termSelect_startDate">Start Date:&#160;</string>
    <string name="termSelect_endDate">End Date:&#160;</string>

    <string name="finalGrade_label">Final Grade:&#160;</string>
    <string name="credits_label">Credits:&#160;</string>

    <string name="news_title">News</string>

    <string name="sfs_title">Search for Sections</string>
    <string name="search_sections_term">Term:</string>
    <string name="search_sections_dateHint">M/d/yyyy</string>
    <string name="search_sections_meetingStartDate">Meeting Start Date:</string>
    <string name="search_sections_meetingEndDate">Meeting End Date:</string>
    <string name="search_sections_subject">Subject:</string>
    <string name="search_sections_courseLevel">Course Level:</string>
    <string name="search_sections_courseNum">Course Number:</string>
    <string name="search_sections_addFilterGroup">Add</string>
    <string name="search_sections_section">Section:</string>
    <string name="search_sections_timeOfDay">Time Of Day:</string>
    <string name="search_sections_timeHint">hh:mm AM/PM</string>
    <string name="search_sections_timeStartsBy">Time Starts By:</string>
    <string name="search_sections_timeEndsBy">Time Ends By:</string>
    <string name="search_sections_courseKeywords">Course Title Keyword(s):</string>
    <string name="search_sections_location">Location:</string>
    <string name="search_sections_academicLevel">Academic Level:</string>
    <string name="search_sections_instructorsLastName">Instructor\'s Last Name:</string>
    <string name="search_sections_submit">Submit</string>

    <string name="threeletterweek_monday">Mon</string>
    <string name="threeletterweek_tuesday">Tue</string>
    <string name="threeletterweek_wednesday">Wed</string>
    <string name="threeletterweek_thursday">Thu</string>
    <string name="threeletterweek_friday">Fri</string>
    <string name="threeletterweek_saturday">Sat</string>
    <string name="threeletterweek_sunday">Sun</string>

    <string name="searchResults_title">Search Results</string>
    <string name="searchResults_noResults">No Sections Found</string>
    <string name="section_status">Status:</string>
    <string name="section_location">Location:</string>
    <string name="section_term">Term:</string>
    <string name="section_faculty">Faculty:</string>
    <string name="section_available">Available:</string>
    <string name="section_credits">Credits:</string>
    <string name="section_academicLevel">Academic Level:</string>
    <string name="section_meetings">Meeting Information:</string>

    <string name="secdet_title">Section Details</string>
    <string name="sectionDetails_description">Description:</string>
    <string name="sectionDetails_offerings">Offering(s):</string>
    <string name="sectionDetails_restrictions">Restriction(s):</string>
    <string name="sectionDetails_prereqs">Prerequisite(s):</string>
    <string name="sectionDetails_departments">Department(s):</string>
    <string name="sectionDetails_startDate">Start Date:</string>
    <string name="sectionDetails_endDate">End Date:</string>
    <string name="sectionDetails_facultyName">Faculty Name:</string>
    <string name="sectionDetails_facultyEmail">Email:</string>
    <string name="sectionDetails_facultyPhone">Phone:</string>
    <string name="sectionDetails_facultyExtension">Extension:</string>
    <string name="secdet_send_email_prompt">Send Email Using…</string>
    <string name="secdet_email_unable">Unable to send email, do you have an email app installed?</string>
    <string name="secdet_phone_unable">Unable to open dialer, is this a phone?</string>

    <string name="accountView_title">Account View</string>
    <string name="accountView_balance">Balance:</string>
    <string name="accountView_noTermsError">Unable to retrieve account view terms.</string>

    <string name="about_header">WAMobile</string>
    <string name="about_version_base">Version</string>
    <string name="about_author">By Ryan Simmons</string>
    <string name="about_website">Website</string>
    <string name="about_websiteUrl">https://ryangwsimmons.ca/projects/wamobile/</string>
    <string name="about_githubUrl">https://github.com/ryangwsimmons/WAMobile/</string>
    <string name="about_source">View This App\'s Source Code on GitHub</string>

    <string name="title_activity_grade_view">GradeViewActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>