<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuItem_news"
            android:title="@string/menuItem_news" />

        <item android:title="@string/menuItem_registration">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/menuItem_searchSections"
                        android:title="@string/menuItem_searchSections" />

                </group>
            </menu>
        </item>

        <item android:title="@string/menuItem_academicProfile">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/menuItem_grades"
                        android:title="@string/menuItem_grades" />

                </group>
            </menu>
        </item>

    </group>

</menu>