<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SearchSectionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_term"
                android:textSize="20sp"
                android:text="@string/search_sections_term" />

            <Spinner
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_terms"
                android:layout_toEndOf="@id/textView_term"
                android:layout_alignTop="@id/textView_term"
                android:layout_alignBottom="@id/textView_term"
                android:layout_marginStart="8dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row_meetingStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_meetingStartDate"
                android:layout_toStartOf="@id/editText_meetingStartDate_wrapper"
                android:layout_alignTop="@id/editText_meetingStartDate_wrapper"
                android:layout_alignBottom="@id/editText_meetingStartDate_wrapper"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/search_sections_meetingStartDate" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_meetingStartDate_wrapper"
                android:layout_alignParentEnd="true"
                android:background="@color/design_default_color_background">
                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_meetingStartDate"
                    android:inputType="none"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp"
                    android:hint="@string/search_sections_dateHint"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated,TextFields" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row_meetingEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_meetingEndDate"
                android:labelFor="@id/editText_meetingEndDate"
                android:layout_toStartOf="@id/editText_meetingEndDate_wrapper"
                android:layout_alignTop="@id/editText_meetingEndDate_wrapper"
                android:layout_alignBottom="@id/editText_meetingEndDate_wrapper"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/search_sections_meetingEndDate" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_meetingEndDate_wrapper"
                android:layout_alignParentEnd="true"
                android:background="@color/design_default_color_background">
                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_meetingEndDate"
                    android:inputType="none"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp"
                    android:hint="@string/search_sections_dateHint"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated,TextFields" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/searchSections_filterGroups">

            <include
                layout="@layout/search_sections_filter_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp" />

        </LinearLayout>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_addFilterGroup"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search_sections_addFilterGroup"
            android:drawableStart="@drawable/ic_baseline_add_24"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_timeOfDay"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/spinner_timeOfDay"
                android:textSize="18sp"
                android:text="@string/search_sections_timeOfDay" />

            <Spinner
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_timeOfDay"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/textView_timeOfDay"
                android:layout_alignBottom="@id/textView_timeOfDay" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_timeStartsBy"
                android:labelFor="@id/editText_timeStartsBy"
                android:layout_toStartOf="@id/editText_timeStartsBy_wrapper"
                android:layout_alignTop="@id/editText_timeStartsBy_wrapper"
                android:layout_alignBottom="@id/editText_timeStartsBy_wrapper"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/search_sections_timeStartsBy" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_timeStartsBy_wrapper"
                android:layout_alignParentEnd="true"
                android:background="@color/design_default_color_background">
                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_timeStartsBy"
                    android:inputType="none"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp"
                    android:hint="@string/search_sections_timeHint"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_timeEndsBy"
                android:labelFor="@id/editText_timeEndsBy"
                android:layout_toStartOf="@id/editText_timeEndsBy_wrapper"
                android:layout_alignTop="@id/editText_timeEndsBy_wrapper"
                android:layout_alignBottom="@id/editText_timeEndsBy_wrapper"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/search_sections_timeEndsBy" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_timeEndsBy_wrapper"
                android:layout_alignParentEnd="true"
                android:background="@color/design_default_color_background">
                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_timeEndsBy"
                    android:inputType="none"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp"
                    android:hint="@string/search_sections_timeHint"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated" />
            </RelativeLayout>
        </RelativeLayout>

        <include
            layout="@layout/days_checkboxes"
            android:id="@+id/days_checkboxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_location"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/spinner_location"
                android:textSize="18sp"
                android:text="@string/search_sections_location" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_location"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/textView_location"
                android:layout_alignBottom="@id/textView_location" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_academicLevel"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/spinner_academicLevel"
                android:textSize="18sp"
                android:text="@string/search_sections_academicLevel" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_academicLevel"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/textView_academicLevel"
                android:layout_alignBottom="@id/textView_academicLevel" />
        </RelativeLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_submitSearch"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search_sections_submit" />

    </LinearLayout>

</ScrollView>